Started with the refactoring. - Created package structure. - Created Enums and Constants - Refactored code